--- a/medic-care/medic-care/index.html
+++ b/medic-care/medic-care/index.html
@@ -109,7 +109,9 @@
                                     </div>
                                 </h1>
 
-                                <p class="mb-4">Medic Care è un Template Bootstrap 5 fornito dal sito TemplateMo. Crediamo nella cura centrata sul paziente e nell'utilizzo delle migliori pratiche mediche per garantire la tua salute.</p> <div class="heroLinks d-flex flex-wrap align-items-center">
+                                <p class="mb-4">Medic Care è un Template Bootstrap 5. Crediamo nella cura centrata sul paziente e nell'utilizzo delle migliori pratiche mediche per garantire la tua salute.</p>
+
+                                <div class="heroLinks d-flex flex-wrap align-items-center">
                                     <a class="custom-link me-4" href="#about" data-hover="Scopri di più">Scopri di più</a>
 
                                     <p class="contact-phone mb-0"><i class="bi-phone"></i> 010-020-0340</p>
@@ -128,7 +130,9 @@
                         <div class="col-lg-6 col-md-6 col-12">
                             <h2 class="mb-lg-3 mb-3">Incontra il Dott. Carson</h2>
 
-                            <p>Il Dott. Carson è un luminare nel campo della medicina preventiva, con un approccio olistico alla salute. Si è specializzato nella gestione delle malattie croniche e nell'offrire consulenze personalizzate sul benessere. La nostra missione è fornire assistenza sanitaria di altissima qualità.</p> <p>Puoi sentirti libero di utilizzare questo template CSS per i tuoi siti web relativi alla professione medica o all'assistenza sanitaria. Il nostro team di professionisti è dedicato al tuo benessere e alla tua serenità. Puoi <a rel="nofollow" href="http://paypal.me/templatemo" target="_blank">sostenerci con un piccolo contributo</a> tramite PayPal se questo template è buono e utile per il tuo lavoro.</p> </div>
+                            <p>Il Dott. Carson è un luminare nel campo della medicina preventiva, con un approccio olistico alla salute. Si è specializzato nella gestione delle malattie croniche e nell'offrire consulenze personalizzate sul benessere. La nostra missione è fornire assistenza sanitaria di altissima qualità.</p>
+
+                            <p>Puoi sentirti libero di utilizzare questo template CSS per i tuoi siti web relativi alla professione medica o all'assistenza sanitaria. Il nostro team di professionisti è dedicato al tuo benessere e alla tua serenità. Questo è un <b>template di esempio fornito da Nordev</b>.</p> </div>
 
                         <div class="col-lg-4 col-md-5 col-12 mx-auto">
                             <div class="featured-circle bg-white shadow-lg d-flex justify-content-center align-items-center">
@@ -165,7 +169,10 @@
                         <div class="timeline">
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes">
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Lancio della Campagna Vaccinale</h3> <p>Abbiamo lanciato una campagna di sensibilizzazione e accesso rapido alle vaccinazioni per la comunità, garantendo la massima sicurezza e informazione.</p> </div>
+                                    <h3 class=" text-light">Lancio della Campagna Vaccinale</h3>
+
+                                    <p>Abbiamo lanciato una campagna di sensibilizzazione e accesso rapido alle vaccinazioni per la comunità, garantendo la massima sicurezza e informazione.</p>
+                                </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
                                     <i class="bi-patch-check-fill timeline-icon"></i>
@@ -178,7 +185,10 @@
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes my-lg-5 my-4">
                                 <div class="col-9 col-md-5 ms-md-4 ms-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Consulenza virtuale sulla salute</h3> <p>Abbiamo ampliato i nostri servizi offrendo consulenze mediche online, permettendo ai pazienti di ricevere assistenza comodamente da casa, mantenendo elevati standard di cura. Sei pienamente autorizzato a utilizzare questo template per il tuo sito web.</p> </div>
+                                    <h3 class=" text-light">Consulenza virtuale sulla salute</h3>
+
+                                    <p>Abbiamo ampliato i nostri servizi offrendo consulenze mediche online, permettendo ai pazienti di ricevere assistenza comodamente da casa, mantenendo elevati standard di cura. Sei pienamente autorizzato a utilizzare questo template per il tuo sito web.</p>
+                                </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
                                     <i class="bi-book timeline-icon"></i>
@@ -191,7 +201,10 @@
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes">
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Aumento del Personale Certificato</h3> <p>Abbiamo investito nella formazione e nell'assunzione di un nuovo team di infermieri altamente qualificati e certificati per migliorare il rapporto infermiere/paziente e la qualità dell'assistenza.</p> </div>
+                                    <h3 class=" text-light">Aumento del Personale Certificato</h3>
+
+                                    <p>Abbiamo investito nella formazione e nell'assunzione di un nuovo team di infermieri altamente qualificati e certificati per migliorare il rapporto infermiere/paziente e la qualità dell'assistenza.</p>
+                                </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
                                     <i class="bi-file-medical timeline-icon"></i>
@@ -204,7 +217,12 @@
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes my-lg-5 my-4">
                                 <div class="col-9 col-md-5 ms-md-4 ms-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Potenziamento delle Strutture</h3> <p class="mb-0 pb-0">Abbiamo rinnovato e attrezzato le nostre strutture per essere in prima linea nella risposta a emergenze sanitarie, garantendo la capacità di curare un elevato numero di pazienti.</p> <p>Il nostro focus è sull'eccellenza operativa e sull'adozione di protocolli all'avanguardia per la sicurezza di pazienti e personale.</p> </div>
+                                    <h3 class=" text-light">Potenziamento delle Strutture</h3>
+
+                                    <p class="mb-0 pb-0">Abbiamo rinnovato e attrezzato le nostre strutture per essere in prima linea nella risposta a emergenze sanitarie, garantendo la capacità di curare un elevato numero di pazienti.</p>
+
+                                    <p>Il nostro focus è sull'eccellenza operativa e sull'adozione di protocolli all'avanguardia per la sicurezza di pazienti e personale.</p>
+                                </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
                                     <i class="bi-globe timeline-icon"></i>
@@ -217,7 +235,10 @@
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes">
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Programmi di Assistenza a Domicilio</h3> <p>Abbiamo inaugurato un servizio dedicato di assistenza infermieristica freelance e a domicilio per i pazienti con mobilità ridotta, portando la nostra esperienza direttamente a casa tua.</p> </div>
+                                    <h3 class=" text-light">Programmi di Assistenza a Domicilio</h3>
+
+                                    <p>Abbiamo inaugurato un servizio dedicato di assistenza infermieristica freelance e a domicilio per i pazienti con mobilità ridotta, portando la nostra esperienza direttamente a casa tua.</p>
+                                </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
                                     <i class="bi-person timeline-icon"></i>
@@ -253,7 +274,9 @@
 
                                     <p class="text-primary d-block mt-2 mb-0 w-100"><strong>Migliore Assistenza Sanitaria</strong></p>
 
-                                    <p class="reviews-text w-100">Sono estremamente soddisfatta della professionalità e dell'attenzione ricevuta. L'ambiente è accogliente e tutto il personale è stato eccezionale. Lo consiglio vivamente.</p> <img src="images/reviews/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid reviews-image" alt="">
+                                    <p class="reviews-text w-100">Sono estremamente soddisfatta della professionalità e dell'attenzione ricevuta. L'ambiente è accogliente e tutto il personale è stato eccezionale. Lo consiglio vivamente.</p>
+
+                                    <img src="images/reviews/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid reviews-image" alt="">
 
                                     <figcaption class="ms-4">
                                         <strong>Marie</strong>
@@ -273,7 +296,9 @@
 
                                     <p class="text-primary d-block mt-2 mb-0 w-100"><strong>Il Dottore si prende cura di tutti!</strong></p>
 
-                                    <p class="reviews-text w-100">Dopo la mia degenza, mi sento un uomo nuovo. L'equipe medica è stata incredibile, offrendo un supporto costante e spiegazioni chiare sul mio percorso di recupero. Veri professionisti.</p> <img src="images/reviews/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid reviews-image" alt="">
+                                    <p class="reviews-text w-100">Dopo la mia degenza, mi sento un uomo nuovo. L'equipe medica è stata incredibile, offrendo un supporto costante e spiegazioni chiare sul mio percorso di recupero. Veri professionisti.</p>
+
+                                    <img src="images/reviews/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid reviews-image" alt="">
 
                                     <figcaption class="ms-4">
                                         <strong>Ben Walker</strong>
@@ -293,7 +318,9 @@
 
                                     <p class="text-primary d-block mt-2 mb-0 w-100"><strong>Ottimi servizi!</strong></p>
 
-                                    <p class="reviews-text w-100">La clinica offre servizi di prim'ordine. La prenotazione è stata semplice e veloce. La dottoressa mi ha ascoltato con attenzione e ha proposto un piano terapeutico mirato.</p> <img src="images/reviews/portrait-british-woman.jpeg" class="img-fluid reviews-image" alt="">
+                                    <p class="reviews-text w-100">La clinica offre servizi di prim'ordine. La prenotazione è stata semplice e veloce. La dottoressa mi ha ascoltato con attenzione e ha proposto un piano terapeutico mirato.</p>
+
+                                    <img src="images/reviews/portrait-british-woman.jpeg" class="img-fluid reviews-image" alt="">
 
                                     <figcaption class="ms-4">
                                         <strong>Laura Zono</strong>
@@ -313,7 +340,9 @@
 
                                     <p class="text-primary d-block mt-2 mb-0 w-100"><strong>Migliori Consigli</strong></p>
 
-                                    <p class="reviews-text w-100">Ho ricevuto consigli vitali per la mia salute a lungo termine. L'approccio preventivo della clinica fa davvero la differenza. Grazie per avermi aiutato a rimettermi in sesto.</p> <img src="images/reviews/woman-wearing-mask-face-closeup-covid-19-green-background.jpeg" class="img-fluid reviews-image" alt="">
+                                    <p class="reviews-text w-100">Ho ricevuto consigli vitali per la mia salute a lungo termine. L'approccio preventivo della clinica fa davvero la differenza. Grazie per avermi aiutato a rimettermi in sesto.</p>
+
+                                    <img src="images/reviews/woman-wearing-mask-face-closeup-covid-19-green-background.jpeg" class="img-fluid reviews-image" alt="">
 
                                     <figcaption class="ms-4">
                                         <strong>Rosey</strong>
@@ -358,7 +387,8 @@
                                         </div>
 
                                         <div class="col-12">
-                                            <textarea class="form-control" rows="5" id="message" name="message" placeholder="Descrivi brevemente il motivo della visita o i tuoi sintomi"></textarea> </div>
+                                            <textarea class="form-control" rows="5" id="message" name="message" placeholder="Descrivi brevemente il motivo della visita o i tuoi sintomi"></textarea>
+                                        </div>
 
                                         <div class="col-lg-3 col-md-4 col-6 mx-auto">
                                             <button type="submit" class="form-control" id="submit-button">Prenota Ora</button>
@@ -402,7 +432,10 @@
                     <div class="col-lg-2 col-md-6 col-12 my-4 my-lg-0">
                         <h5 class="mb-lg-4 mb-3">La Nostra Clinica</h5>
 
-                        <p><a href="mailto:hello@company.co">info@medicareclinic.it</a><p> <p>123 Via dell'Arte Digitale, San Diego, CA 92123</p> </div>
+                        <p><a href="mailto:hello@company.co">info@medicareclinic.it</a><p>
+
+                        <p>123 Via dell'Arte Digitale, San Diego, CA 92123</p>
+                    </div>
 
                     <div class="col-lg-3 col-md-6 col-12 ms-auto">
                         <h5 class="mb-lg-4 mb-2">Social</h5>
@@ -418,9 +451,8 @@
                         </ul>
 
                         <div>
-                            <p class="copyright-text">Copyright © Medic Care 2021
-                            <br><br>Design: <a href="https://templatemo.com" target="_parent">TemplateMo</a></p>
-                            <p class="copyright-text">Distribuito da: <a href="https://themewagon.com" target="_parent">Themewagon</a></p>
+                            <p class="copyright-text">Copyright © Medic Care 2021</p>
+                            <p class="copyright-text">Questo è un template di esempio fornito da <b>Nordev</b>.</p>
                         </div>
                     </div>
 
